--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,26 @@
-@font-face {
-    font-family: "Rubik";
-    src: url('../fonts/DSEG7Classic-LightItalic.ttf');
-    font-weight: normal;
-    font-style: normal;
-  }
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
 
-  
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+  body {
+    color: white;
+    background: black;
+  }
+}
